--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 			
 			<!--End solo's Section-->
 
-			<!-- Mawu's Section-->
+			<!-- Mawu's Section Aria-sort -->
 			<section>
 				<section><br><img src="assets/aria-sort1.png"></section>
 					<section class="title">ARIA-SORT:  The aria-sort attribute indicates 
