added project insight section

--- a/index.html
+++ b/index.html
@@ -671,6 +671,16 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 					</ol>
 				</div>
 			</section>
+			<!-- Project Insights-->
+			<section>
+				<ul>
+					<h2>Project Insights</h2>
+					<li><strong>What we have Learned:</strong></li>
+					<li><strong>Challenging Aspects:</strong></li>
+					<li><strong>What You Had Fun With:</strong></li>
+				</ul>
+			</section>
+
 		</div>
 	</div>
 
