--- a/index.html
+++ b/index.html
@@ -601,6 +601,8 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 						aria-valuenow for a range widget. Numbers — even percentages — aren't always user-friendly. Assistive
 						technologies present <span class="aria-label-highlighted">aria-valuenow</span> as numeric values.
 					</blockquote>
+				</section>
+				<section>
 					<p>The <mark>aria-valuetext</mark> attribute defines the human-readable text alternative of
 						aria-valuenow
 						for a range widget.
