--- a/index.html
+++ b/index.html
@@ -419,16 +419,20 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 
 			<!-- Solo's aria Section-->
 			<section>
-				<h1>aria-checked</h1>
-				<h2>Chapter 1: The aria-checked</h2>
-				<p>
-					The aria-checked attribute indicates the current "checked" state of checkboxes, radio buttons, and other widgets.
-					Note: Where possible use an HTML element with type="checkbox" and type="radio" as these have built in semantics and do not require ARIA attributes.
+				<h2>aria-checked</h2>
+				<h4>#description: The aria-checked</h4>
+				<p> The aria-checked attribute indicates the current "checked" state of checkboxes, radio buttons, and other widgets.
+				The aria-checked attribute indicates whether the element is checked (true), 
+						unchecked (false), or if the checked status is indeterminate (mixed), meaning it is 
+						neither checked nor unchecked. The mixed value is supported by the tri-state input roles of checkbox and menuitemcheckbox.
+						The mixed value is not supported on radio, menuitemradio, or switch and elements that inherits from these. 
+						The value will be false if mixed is set when not supported.</p>
+				  <p> <a href="https://www.youtube.com/watch?v=mwG4_qAa4AU">Please have a look here for more information </a> 
 				  </p>
-				  <p> <a href="https://www.youtube.com/watch?v=0hqhAIjE_8I&t=545s">Please have a look here </a> 
+
 				  </p>
 			</section>
-			
+
 			<!--End solo's Section-->
 
 			<!-- Mawu's Section-->
