upgraded slide 1 and 2

--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
 					<p>A 11 y </p>
 				</section>
 				<section>
-					<h2>What is web Accessibility</h2>
-					<p>Its an idea that technology must be <mark>equally accessible</mark> to people <mark>with and without
-							disabilities</mark></p>
-					<ul>
+					<h2 class="aria-label-heading">What is web Accessibility</h2>
+					<p>Its an idea that technology must be <span class="aria-label-highlighted">equally accessible</span> to people <span class="aria-label-highlighted">with and without
+							disabilities</span></p>
+					<ul class="a11y-list">
 						<li>Accessible Navigation </li>
 						<li>Keyboard Accessibility (for screen reader when using the tab key to navigate)</li>
 						<li>Color Contrast (Background and text color) </li>
 						<!--- (addressing people with vision impairments and/or using technology in sunshine) -->
 						<li>Headings and Structure</li>
-						<li>accessible names for interactive elements</li>
+						<li>Accessible names for interactive elements</li>
 						<li>Responsive Design</li>
 						<li>Descriptive Links</li>
 						<li>Alternative Text (Alt Text)</li>
@@ -56,15 +56,15 @@
 			<!-- ARIA attribute Section -->
 			<section>
 				<section>
-					<h2>ARIA</h2>
+					<h2 class="aria-label-heading">ARIA</h2>
 					<p>
-						ARIA — short for <mark> Accessible Rich Internet Applications </mark> — defines a way to make web content
+						ARIA — short for <span class="aria-label-highlighted"> Accessible Rich Internet Applications </span> — defines a way to make web content
 						and web applications more accessible to people with disabilities.
 					</p>
 					<p>ARIA can be used to enhance an HTML document by providing additional accessibility information
 						about web
 						pages </p>
-					<mark>No ARIA is better than bad ARIA.</mark>
+					<span class="aria-label-underline aria-label-highlighted">No ARIA is better than bad ARIA.</span>
 				</section>
 			</section>
 			<!-- Leon's Section aria-keyshortcuts -->
@@ -674,7 +674,7 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 			<!-- Project Insights-->
 			<section>
 				<ul>
-					<h2>Project Insights</h2>
+					<h2 class="aria-label-heading">Project Insights</h2>
 					<li><strong>What we have Learned:</strong></li>
 					<li><strong>Challenging Aspects:</strong></li>
 					<li><strong>What You Had Fun With:</strong></li>
