changed font-size of PROJECT INSIGHTS <h4> and <li>

--- a/index.html
+++ b/index.html
@@ -673,8 +673,8 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 			</section>
 			<!-- Project Insights-->
 			<section>
-				<ul>
-					<h2 class="aria-label-heading">Project Insights</h2>
+				<h4 class="aria-label-heading">Project Insights</h4>
+				<ul class="project-insights">
 					<li><strong>What we have Learned:</strong></li>
 					<li><strong>Challenging Aspects:</strong></li>
 					<li><strong>What You Had Fun With:</strong></li>
