added style on A11y slide,turn list highlight-current-green

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
 					<p>Its an idea that technology must be <span class="aria-label-highlighted">equally accessible</span> to people <span class="aria-label-highlighted">with and without
 							disabilities</span></p>
 					<ul class="a11y-list">
-						<li>Accessible Navigation </li>
-						<li>Keyboard Accessibility (for screen reader when using the tab key to navigate)</li>
-						<li>Color Contrast (Background and text color) </li>
+						<li class="fragment highlight-current-green">Accessible Navigation </li>
+						<li class="fragment highlight-current-green">Keyboard Accessibility (for screen reader when using the tab key to navigate)</li>
+						<li class="fragment highlight-current-green">Color Contrast (Background and text color) </li>
 						<!--- (addressing people with vision impairments and/or using technology in sunshine) -->
-						<li>Headings and Structure</li>
-						<li>Accessible names for interactive elements</li>
-						<li>Responsive Design</li>
-						<li>Descriptive Links</li>
-						<li>Alternative Text (Alt Text)</li>
+						<li class="fragment highlight-current-green">Headings and Structure</li>
+						<li class="fragment highlight-current-green">Accessible names for interactive elements</li>
+						<li class="fragment highlight-current-green">Responsive Design</li>
+						<li class="fragment highlight-current-green">Descriptive Links</li>
+						<li class="fragment highlight-current-green">Alternative Text (Alt Text)</li>
 					</ul>
 				</section>
 			</section>
