--- a/index.html
+++ b/index.html
@@ -626,10 +626,25 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 				<section>
 					<p>The values of <span class="aria-label-highlighted">aria-valuenow</span> for a 4-year college
 						could range from 1 through 4, which indicate the position of each value in the value space. In this case,
-						the
-						<a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-valuetext"
-							target="_blank">aria-valuetext</a> could be one of the strings: "first year", "sophomore", "junior", and
-						"senior".
+						the	<a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-valuetext"	target="_blank">aria-valuetext</a>
+						 could be one of the strings: "first year", "sophomore", "junior", and enior".
+					</p>
+				</section>
+				<section>
+					<p>If the numeric value is meaningful, such as a spinner with <span class="aria-label-highlighted">aria-valuenow="3"</span>
+						 for how many pizza slices you want to order, <span class="aria-label-highlighted">aria-valuetext</span> is not needed. 
+					</p>
+				</section>
+				<section>
+					<p> 						 
+						 When both the <span class="aria-label-highlighted"> aria-valuetext</span> and <span class="aria-label-highlighted">aria-valuenow</span>
+						 are included, the <span class="aria-label-highlighted"> aria-valuetext</span> is announced. When there is no aria-valuetext attribute, assistive technologies will announce the 
+						 <span class="aria-label-highlighted"> aria-valuenow</span> attribute for the current value.
+					</p>
+				</section>
+				<section>
+					<p>And this is all you need to know about the <span class="aria-label-highlighted">aria-valuetext</span>! 
+						Or not? Feel free to ask any questions!
 					</p>
 				</section>
 			</section>
