last-minute-addition

--- a/index.html
+++ b/index.html
@@ -595,9 +595,12 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 				<section>
 					<h2>aria-valuetext</h2>
 					<blockquote id="aria-colindex">The <mark>aria-valuetext</mark> attribute defines the human-readable text
-						alternative of
-						aria-valuenow for a range widget. Numbers — even percentages — aren't always user-friendly. Assistive
-						technologies present <span class="aria-label-highlighted">aria-valuenow</span> as numeric values.
+						alternative of	<a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-valuenow">aria-valuenow</a> 
+						for a range widget. Numbers — even percentages — aren't always user-friendly. Assistive
+						technologies present <span class="aria-label-highlighted">aria-valuenow</span> as numeric values.<br>
+						The <span class="aria-label-highlighted">aria-valuenow</span> attribute defines the current value for a 
+						<span class="aria-label-highlighted">range</span> widget.
+
 					</blockquote>
 				</section>
 				<section>
