--- a/index.html
+++ b/index.html
@@ -421,11 +421,17 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 			<section>
 				<h2>aria-checked</h2>
 				<h4>description: The aria-checked</h4>
-				<p>
-					The aria-checked attribute indicates the current "checked" state of checkboxes, radio buttons, and other widgets.
-					Note: Where possible use an HTML element with type="checkbox" and type="radio" as these have built in semantics and do not require ARIA attributes.
+				<p>The aria-checked attribute indicates the current "checked" state of checkboxes, radio buttons, and other widgets.
+					Note: Where possible use an HTML<input>element with type="checkbox" and type="radio" as these have built in semantics and do not require ARIA attributes.
+					The mixed value is not supported on radio, menuitemradio, or switch and elements that inherits from these. The value will be false if mixed is set when not supported.
 				  </p>
-				  <p> <a href="https://www.youtube.com/watch?v=mwG4_qAa4AU">Please have a look here </a> 
+				   <span
+  role="checkbox"
+  id="checkBoxInput"
+  aria-checked="false"
+  tabindex="0"
+  aria-labelledby="chk15-label"></span>
+ <p> <a href="https://blog.hubspot.com/website/html-input-types">Please have a look here for more information </a> 
 				  </p>
 			</section>
 
