updated INSIGHTS slide & added inline style to it

--- a/index.html
+++ b/index.html
@@ -675,11 +675,19 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 			<section>
 				<h4 class="aria-label-heading">Project Insights</h4>
 				<ul class="project-insights">
-					<li><strong>What we have Learned:</strong></li>
-					<li><strong>Challenging Aspects:</strong></li>
-					<li><strong>What You Had Fun With:</strong></li>
+					<li><strong>What we have Learned:</strong>
+						<ul><li class="fragment highlight-current-green">general understanding of A11y and ARIA</li></ul>
+					</li>
+					<li><strong>Challenging Aspects:</strong>
+						<ul><li class="fragment highlight-current-green">handling conflicts while working on same branch</li></ul>
+				   </li>
+					<li><strong>What You Had Fun With:</strong>
+						<ul><li class="fragment highlight-current-green">getting to know the reveal.js tool and its capabilities</li></ul>
+					</li>
 				</ul>
 			</section>
+
+			<section><h4><strong>THANK YOU!</strong></h4></section>
 
 		</div>
 	</div>
