--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 						be added to
 						HTML to describe the meaning and purpose of common user interface elements that don’t have semantic tags
 						in
-						HTML
+						HTML.
 					</p>
 					<p>ARIA can be used to enhance an HTML document by providing additional accessibility information about web
 						pages or other
-						parts of a webpage It provides</p>
+						parts of a webpage It provides.</p>
 				</section>
 			</section>
 			<!-- Leon's Section aria-keyshortcuts -->
