--- a/index.html
+++ b/index.html
@@ -699,13 +699,13 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 			<section>
 				<h4 class="aria-label-heading">Project Insights</h4>
 				<ul class="project-insights">
-					<li><strong>What we have Learned:</strong>
+					<li><strong>What We Have Learned:</strong>
 						<ul><li class="fragment highlight-current-green">general understanding of A11y and ARIA</li></ul>
 					</li>
 					<li><strong>Challenging Aspects:</strong>
 						<ul><li class="fragment highlight-current-green">handling conflicts while working on same branch</li></ul>
 				   </li>
-					<li><strong>What You Had Fun With:</strong>
+					<li><strong>What We Had Fun With:</strong>
 						<ul><li class="fragment highlight-current-green">getting to know the reveal.js tool and its capabilities</li></ul>
 					</li>
 				</ul>
