updated Mary's Section with W3C validated code

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<!-- web Accessibility section -->
 			<section>
 				<section>
-					<p>what is A11Y?</p>
+					<h2>what is A11Y?</h2>
 					<p>A ccessibilit y </p>
 					<p>A 11 y </p>
 				</section>
@@ -502,7 +502,8 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 
 			<!-- Mawu's Section Aria-sort -->
 			<section>
-				<section class="title"> <h2>ARIA-SORT:</h2> The aria-sort attribute indicates
+				<section class="title">
+					<h2>ARIA-SORT:</h2> The aria-sort attribute indicates
 					if items in a table or grid are sorted in ascending or descending order.
 				</section>
 				<section class="description">
@@ -531,7 +532,7 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 					column sorted in ascending order.
 				</section>
 				<section class="description">
-						<pre>
+					<pre>
 						<code class="language-html">
 						&lt;table&gt;
 						  &lt;caption&gt;
@@ -610,14 +611,12 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 			<section class="aria-describedby">
 				<h2>aria-describedby</h2>
 				<section>
-					<p> The aria-describedby attribute is used to provide  additional descriptive label for user interface to
+					<h3>Description</h3>
+					<p> The aria-describedby attribute is used to provide additional descriptive label for user interface to
 						screen readers with more context,functionality or information about the element</p>
 				</section>
-
-
 				<section>
 					<h3>Usage:</h3>
-
 					<p>The aria-describedby attribute is used to link an element with one or more descriptions or additional
 						information
 						elements. These descriptions are intended to provide more information to users, and they might not
@@ -625,7 +624,7 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 						visible on the web page.</p>
 				</section>
 				<section>
-					<h3>Syntax</h3>
+					<h3>Value</h3>
 					<ul>
 						<li>
 							The aria-describedby attribute takes as its value the ID of one or more elements that serve as the source
@@ -644,6 +643,7 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 					</ul>
 				</section>
 				<section class="describedby-code-section">
+					<h3>Syntax</h3>
 					<pre>
 					<code class="language-html">
 				  &lt;button  aria-label="Close" aria-describedby="descriptionClose" &gt;X&lt;/button&gt;
@@ -652,7 +652,7 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 			</pre>
 				</section>
 				<section>
-					<h3>Use cases</h3>
+					<h3>Use Cases</h3>
 					<ul>
 						<li> <span class="aria-label-highlighted">Complex Form Fields</span> <em>(An address form with guidelines
 								for each field.)</em></li>
@@ -693,12 +693,10 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 					<h3> Example with aria-describedby</h3>
 					<ul>
 						<li> <a href="https://maryrichelle.github.io/Mailchimp-clone/" target="_blank">
-							Live Demo: </a>
-							 Use <a
-									href="https://chrome.google.com/webstore/detail/screen-reader/kgejglhpjiefppelpmljglcjbhoiplfn"
-									target="_blank" rel="noopener noreferrer">Screen Reader</a> and <span
-									class="aria-label-highlighted">Tab
-									key </span>
+								Live Demo: </a>
+							Use <a href="https://chrome.google.com/webstore/detail/screen-reader/kgejglhpjiefppelpmljglcjbhoiplfn"
+								target="_blank" rel="noopener noreferrer">Screen Reader</a> and <span class="aria-label-highlighted">Tab
+								key </span>
 						</li>
 						<li><a href="https://github.com/MaryRichelle/Mailchimp-clone/blob/main/index.html" target="_blank"
 								rel="noopener noreferrer">Code(GitHub Repo ↗️):</a></li>
